--- a/composer.json
+++ b/composer.json
@@ -10,5 +10,13 @@
         }
     ],
     "minimum-stability": "dev",
-    "require": {}
+    "require": {
+      "php" : ">=5.3.0",
+      "illuminate/support": "~5.2"
+    },
+    "autoload": {
+      "psr-4": {
+        "LaraModulus\\AdminBlog\\": "src/"
+      }
+    }
 }
