lowercase module name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "LaraMod/admin-blog",
+    "name": "laramod/admin-blog",
     "description": "LaraModulus Blog Module",
     "type": "library",
     "license": "MIT",
